[package]
name = "classgroup_benchmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", branch = "jonas/vdf_optimise", features = ["experimental"] }
num-bigint = "0.4.3"
class_group = "0.6.1"
curv-kzen = { version = "0.10" }
num-traits = "0.2.16"
classgroup = { version = "0.1.0" }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "fastcrypto"
harness = false

[[bench]]
name = "class_group"
harness = false

[[bench]]
name = "classgroup"
harness = false
